minified javascript. fixed expanding image divs

--- a/app/game.html
+++ b/app/game.html
@@ -20,9 +20,9 @@
 <body>
 
     <canvas id='canvas'></canvas>
-    <script type='text/javascript' src='js/game.js'></script>
+    <script type='text/javascript' src='js/game-min.js'></script>
     <script type='text/javascript' src='js/neuralnet-min.js'></script>
-    <script type='text/javascript' src='js/walk-neural.js'></script>
+    <script type='text/javascript' src='js/walk-neural-min.js'></script>
 
     <br><br>
     <button onclick='startAI()' id='startbtn'>
